--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
     position: relative;
 }
 
-/* Background layers */
+/* Background */
 .bg-layer {
     position: fixed;
     top:0;
@@ -66,7 +66,7 @@ h1 {
     text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
 }
 
-/* Time Box (3D Card Style) */
+/* Time Box 3D Style */
 .time-box {
     position: absolute;
     top: 20px;
@@ -117,7 +117,7 @@ h1 {
     gap: 15px;
 }
 
-/* Professional Button style with gradient */
+/* VIP charith Button style */
 button {
     background: linear-gradient(135deg, #6a11cb, #2575fc);
     border: none;
@@ -135,7 +135,7 @@ button {
     transform-style: preserve-3d;
 }
 
-/* Hover 3D & glow */
+/* Hover 3D */
 button:hover {
     transform: translateY(-4px) scale(1.03) rotateX(2deg);
     box-shadow: 0 15px 35px rgba(255,215,0,0.8), 0 0 15px rgba(255,255,255,0.3) inset;
@@ -295,5 +295,6 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
