--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ footer {
 </div>
 
 <div class="container">
-    <h1>MasterTrack Hub</h1>
+    <h1>Global Horse Race Hub</h1>
     <div class="buttons">
         <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>UK Time Manager</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>Tipping Editor</span></button>
@@ -295,6 +295,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
