--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@ footer {
 <div class="container">
     <h1>Global Horse Race Hub</h1>
     <div class="buttons">
-        <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>UK Time Manager</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>Tipping Editor</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Race Tracker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>UK Tracker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>RaceTips Editor</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/kh-marker/')"><span>Harness K/H Tool</span></button>
     </div>
 </div>
@@ -295,6 +295,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
