--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@ footer {
         <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>UK Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>UK RaceTips Editor</span></button>
         <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Tracker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/kh-marker/')"><span>Harness K/H Tool</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/kh-marker/')"><span>Harness K/H Tool 1</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>Harness .K./.H. Tool 2</span></button>
     </div>
 </div>
 
@@ -295,6 +296,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
