--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ footer {
         <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/kh-marker/')"><span>Harness K/H Tool 1</span></button>
         <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>Harness .K./.H. Tool 2</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>TARR AUS .K./.H. Tool 3</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>TARR AUS .K./.H. Tool 3</span></button>
     </div>
 </div>
 
@@ -297,6 +297,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
