--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@ footer {
     storageBucket: "vipdashboard-14354.firebasestorage.app",
     messagingSenderId: "473646422817",
     appId: "1:473646422817:web:725c533872395a442afc60",
-    measurementId: "G-DYMCWEQYEQ"
+    measurementId: "G-DYMCWEQYEQ",
+    databaseURL: "https://vipdashboard-14354-default-rtdb.firebaseio.com/"
+
   };
 
   // Initialize Firebase
@@ -362,6 +364,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
