--- a/index.html
+++ b/index.html
@@ -168,11 +168,31 @@ footer {
     width: 100%;
 }
 
-/* Responsive */
-@media(max-width: 500px){
-    .container { padding: 25px 15px; }
-    h1 { font-size: 1.8rem; margin-bottom: 15px; }
+/* Responsive Fixes */
+@media(max-width:600px){
+    /* Time box moves to top center */
+    .time-box {
+        position: relative;
+        top: auto;
+        right: auto;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    /* Container width */
+    .container {
+        max-width: 95%;
+        padding: 20px 15px;
+    }
+
+    /* Heading size */
+    h1 { font-size: 1.5rem; margin-bottom: 15px; }
+
+    /* Buttons size */
     button { font-size: 0.9rem; padding: 12px; }
+
+    /* Overlay scrollable */
+    #name-overlay { overflow-y: auto; padding: 20px; }
 }
 </style>
 </head>
@@ -303,14 +323,13 @@ footer {
       const name = input.value.trim();
       if(name === "") { alert("Please enter your name"); return; }
       overlay.style.display = 'none';
-      logVisitor(name); // Now works because we are inside module
+      logVisitor(name);
   });
 
   input.addEventListener('keypress', (e) => {
       if(e.key === 'Enter'){ submitBtn.click(); }
   });
 </script>
-
 
 <script>
 // Open website in new tab
@@ -368,28 +387,6 @@ function updateTimes(){
 }
 setInterval(updateTimes, 1000);
 updateTimes();
-
-// Overlay functionality
-const overlay = document.getElementById('name-overlay');
-const input = document.getElementById('visitor-name');
-const submitBtn = document.getElementById('submit-name');
-
-submitBtn.addEventListener('click', () => {
-    const name = input.value.trim();
-    if(name === "") {
-        alert("Please enter your name");
-        return;
-    }
-    overlay.style.display = 'none';  // Hide overlay
-    logVisitor(name);                // Log visitor with name
-});
-
-input.addEventListener('keypress', (e) => {
-    if(e.key === 'Enter'){
-        submitBtn.click();
-    }
-});
 </script>
 </body>
 </html>
-
