--- a/all.html
+++ b/all.html
@@ -168,11 +168,31 @@ footer {
     width: 100%;
 }
 
-/* Responsive */
-@media(max-width: 500px){
-    .container { padding: 25px 15px; }
-    h1 { font-size: 1.8rem; margin-bottom: 15px; }
+/* Responsive Fixes */
+@media(max-width:600px){
+    /* Time box moves to top center */
+    .time-box {
+        position: relative;
+        top: auto;
+        right: auto;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+
+    /* Container width */
+    .container {
+        max-width: 95%;
+        padding: 20px 15px;
+    }
+
+    /* Heading size */
+    h1 { font-size: 1.5rem; margin-bottom: 15px; }
+
+    /* Buttons size */
     button { font-size: 0.9rem; padding: 12px; }
+
+    /* Overlay scrollable */
+    #name-overlay { overflow-y: auto; padding: 20px; }
 }
 </style>
 </head>
@@ -228,7 +248,6 @@ footer {
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
   import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-database.js";
 
-  // Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyDbwTC7BsmiVgQ8lAwMb6oxUlgsZV6_ukY",
     authDomain: "vipdashboard-14354.firebaseapp.com",
@@ -268,11 +287,9 @@ footer {
 
   async function logVisitor(name) {
     try {
-      // Get IP & location info
       const response = await fetch('https://ipapi.co/json/');
       const data = await response.json();
 
-      // Visitor info
       const visitorData = {
         name: name || "Anonymous",
         timestamp: new Date().toISOString(),
@@ -289,16 +306,29 @@ footer {
         url: window.location.href
       };
 
-      // Save to Firebase
       const visitorsRef = ref(database, 'visitors');
       push(visitorsRef, visitorData);
-
       console.log("Visitor data saved:", visitorData);
-
     } catch(err) {
       console.error("Error logging visitor:", err);
     }
   }
+
+  // --- Overlay Handling ---
+  const overlay = document.getElementById('name-overlay');
+  const input = document.getElementById('visitor-name');
+  const submitBtn = document.getElementById('submit-name');
+
+  submitBtn.addEventListener('click', () => {
+      const name = input.value.trim();
+      if(name === "") { alert("Please enter your name"); return; }
+      overlay.style.display = 'none';
+      logVisitor(name);
+  });
+
+  input.addEventListener('keypress', (e) => {
+      if(e.key === 'Enter'){ submitBtn.click(); }
+  });
 </script>
 
 <script>
@@ -357,27 +387,6 @@ function updateTimes(){
 }
 setInterval(updateTimes, 1000);
 updateTimes();
-
-// Overlay functionality
-const overlay = document.getElementById('name-overlay');
-const input = document.getElementById('visitor-name');
-const submitBtn = document.getElementById('submit-name');
-
-submitBtn.addEventListener('click', () => {
-    const name = input.value.trim();
-    if(name === "") {
-        alert("Please enter your name");
-        return;
-    }
-    overlay.style.display = 'none';  // Hide overlay
-    logVisitor(name);                // Log visitor with name
-});
-
-input.addEventListener('keypress', (e) => {
-    if(e.key === 'Enter'){
-        submitBtn.click();
-    }
-});
 </script>
 </body>
 </html>
