--- a/index.html
+++ b/index.html
@@ -169,31 +169,23 @@ footer {
 }
 
 /* Responsive Fixes */
-@media(max-width:600px){
-    /* Time box moves to top center */
-    .time-box {
-        position: relative;
-        top: auto;
-        right: auto;
-        margin-bottom: 20px;
-        text-align: center;
-    }
-
-    /* Container width */
-    .container {
-        max-width: 95%;
-        padding: 20px 15px;
-    }
-
-    /* Heading size */
-    h1 { font-size: 1.5rem; margin-bottom: 15px; }
-
-    /* Buttons size */
-    button { font-size: 0.9rem; padding: 12px; }
-
-    /* Overlay scrollable */
-    #name-overlay { overflow-y: auto; padding: 20px; }
+@media(max-width:1024px){
+    h1 { font-size: 1.8rem; }
+    button { font-size: 0.95rem; }
 }
+@media(max-width:768px){
+    .time-box { position: relative; top:auto; right:auto; margin-bottom:15px; text-align:center; }
+    .container { max-width: 95%; padding: 20px 15px; }
+    h1 { font-size: 1.5rem; margin-bottom: 15px; }
+    button { font-size: 0.9rem; padding: 12px; }
+}
+@media(max-width:480px){
+    h1 { font-size: 1.2rem; }
+    button { font-size: 0.85rem; padding: 10px; }
+    footer { font-size: 0.75rem; }
+    #name-overlay { overflow-y:auto; padding:20px; }
+}
+
 </style>
 </head>
 <body>
