--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ footer {
     <!-- AGCN QR Code Card -->
 <div class="qr-card">
     <img src="vip.jpeg" alt="VIP QR Code" class="qr-img">
-    <p class="qr-text"> 📱💻Scan for Access</p>
+    <p class="qr-text">Scan for Access</p>
 
 </div>
 </div>
@@ -494,4 +494,5 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
