--- a/all.html
+++ b/all.html
@@ -325,7 +325,7 @@ footer {
 
     <!-- AGCN QR Code Card -->
 <div class="qr-card">
-    <img src="vip.jpeg" alt="VIP QR Code" class="qr-img">
+    <img src="qr.png" alt="VIP QR Code" class="qr-img">
     <p class="qr-text">Scan for Access</p>
 
 </div>
@@ -494,4 +494,5 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
