--- a/index.html
+++ b/index.html
@@ -338,9 +338,9 @@ footer {
         <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>UK Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>UK RaceTips Editor</span></button>
         <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Tracker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/kh-marker/')"><span>Harness K/H Tool 1</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>Harness .K./.H. Tool 2</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>TARR AUS .K./.H. Tool 3</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>Harness AUS New Tool</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>Harness .K./.H. Tool</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>TARR AUS .K./.H. Tool</span></button>
     </div>
 </div>
 
@@ -494,6 +494,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
