--- a/index.html
+++ b/index.html
@@ -337,10 +337,10 @@ footer {
     <div class="buttons">
         <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>UK Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>UK RaceTips Editor</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Tracker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>Harness AUS New Tool</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>Harness .K./.H. Tool</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>TARR AUS .K./.H. Tool</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Tracker(TARR|HARR)</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>(HARR) AUS New Tool</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>(HARR) .K./.H. Tool</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>(TARR) AUS .K./.H. Tool</span></button>
     </div>
 </div>
 
@@ -494,6 +494,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
