--- a/index.html
+++ b/index.html
@@ -335,17 +335,17 @@ footer {
 <div class="container">
     <h1>Global Horse Race Hub</h1>
     <div class="buttons">
-        <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>UK Tracker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>Top UK Races Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>UK RaceTips Editor</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>AUS Tracker(TARR|HARR)</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>(HARR) AUS New Tool</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>(HARR) .K./.H. Tool</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>(TARR) AUS .K./.H. Tool</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>Top AUS Races Tracker[ TARR|HARR ]</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>AUS New Marker[ HARR Code Cleaner with .K./.H. ]</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>AUS .K./.H.[ HARR ] Marker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>AUS .K./.H.[ TARR ] Marker </span></button>
     </div>
 </div>
 
 <footer>
-    &copy; 2025 Charith Neranga | VIP Dashboard
+    &copy; 2025 Charith Neranga | VIP Dashboardbest
 </footer>
 
 <script type="module">
@@ -494,6 +494,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
