--- a/index.html
+++ b/index.html
@@ -341,13 +341,13 @@ footer {
         <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>AUS New Marker [v9.00 e0|.K./.H. ]</span></button>
         <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>AUS .K./.H.[ HARR ] Marker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>AUS .K./.H.[ TARR ] Marker </span></button>
-                <button onclick="openSite(' under working ')"><span>AUS [ GREY ] Tracker </span></button>
+         <button onclick="openSite(' under working ')"><span>AUS [ GREY ] Tracker </span></button>
 
     </div>
 </div>
 
 <footer>
-    &copy; 2025 Charith Neranga | VIP Dashboardbest
+    &copy; 2025 Charith Neranga | VIP Dashboard LS BET 
 </footer>
 
 <script type="module">
@@ -496,6 +496,7 @@ updateTimes();
 </script>
 </body>
 </html>
+
 
 
 
