--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ footer {
         <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>AUS New Marker [v9.00 e0|.K./.H. ]</span></button>
         <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>AUS .K./.H.[ HARR ] Marker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>AUS .K./.H.[ TARR ] Marker </span></button>
-         <button onclick="openSite(' under working ')"><span>AUS [ GREY ] Tracker </span></button>
+         <button onclick="underMaintenance()"> <span>AUS [ GREY ] Tracker</span></button
 
     </div>
 </div>
@@ -493,9 +493,16 @@ function updateTimes(){
 }
 setInterval(updateTimes, 1000);
 updateTimes();
+
+function underMaintenance() {
+  alert("🚧 This page is under maintenance. Coming soon!");
+  // Or, if you prefer a console log:
+  // console.log("Page is still under development");
+}
 </script>
 </body>
 </html>
+
 
 
 
