--- a/index.html
+++ b/index.html
@@ -335,12 +335,12 @@ footer {
 <div class="container">
     <h1>Global Horse Race Hub</h1>
     <div class="buttons">
-        <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>Top UK Race Tracker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>UK RaceTips Editor</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>🇬🇧 Top UK Race Tracker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>🇬🇧 UK RaceTips Editor</span></button>
         <button onclick="openSite('https://agcneranga.github.io/AUS-Race-Premium/')"><span>Top AUS (TARR|HARR) Race Tracker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>AUS New (v9.00 e0|.K./.H.) Marker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>AUS .K./.H. (HARR) Marker</span></button>
-        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>AUS .K./.H. (TARR) Marker </span></button>
+        <button onclick="openSite('https://agcneranga.github.io/RaceKH3/')"><span>🇦🇺 AUS New (v9.00 e0|.K./.H.) Marker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/.k..h.-marker2/')"><span>🇦🇺 AUS .K./.H. (HARR) Marker</span></button>
+        <button onclick="openSite('https://agcneranga.github.io/TARR_AUS_PA/')"><span>🇦🇺 AUS .K./.H. (TARR) Marker </span></button>
          <button onclick="underMaintenance()"> <span>AUS (GREY) Tracker</span></button
 
     </div>
@@ -502,6 +502,7 @@ function underMaintenance() {
 </script>
 </body>
 </html>
+
 
 
 
