--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@ h1 {
     transform-style: preserve-3d;
     transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
+
+.time-box p {
+    font-family: "Segoe UI Emoji", "Noto Color Emoji", "Apple Color Emoji", "Twemoji Mozilla", sans-serif !important;
+}
+
 .time-box:hover {
     transform: rotateY(10deg) rotateX(5deg) scale(1.05);
     box-shadow: 0 20px 40px rgba(255,215,0,0.6), inset 0 0 20px rgba(255,255,255,0.3);
@@ -507,6 +512,7 @@ function underMaintenance() {
 </script>
 </body>
 </html>
+
 
 
 
