--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VIP Horse Race Dashboard</title>
+<title>VIP Horse Race LS Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 <style>
 * { margin:0; padding:0; box-sizing:border-box; font-family: 'Poppins', sans-serif; }
@@ -343,7 +343,7 @@ footer {
 
 
 <div class="container">
-    <h1>Global Horse Race Hub</h1>
+    <h1>Global HorseRace LS Hub</h1>
     <div class="buttons">
         <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>🇬🇧 Top UK Race Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>🇬🇧 UK RaceTips Editor</span></button>
@@ -512,6 +512,7 @@ function underMaintenance() {
 </script>
 </body>
 </html>
+
 
 
 
