--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@ h1 {
 .time-box p {
     margin: 6px 0;
     text-shadow: 1px 1px 4px rgba(0,0,0,0.8);
+    text-align: center; /* agc center line */
 }
 
 /* Neon glow animation */
@@ -505,4 +506,5 @@ function convert() {
 </script>
 </body>
 </html>
+
 
