--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ footer {
 </div>
 
 <div class="container">
-    <h1>Global HorseRace LS Hub</h1>
+    <h1>Global HorseRace LS BET</h1>
     <div class="buttons">
         <button onclick="openSite('https://agcneranga.github.io/UKTE/')"><span>🇬🇧 Top UK Race Tracker</span></button>
         <button onclick="openSite('https://agcneranga.github.io/TCE/')"><span>🇬🇧 UK RaceTips Editor</span></button>
@@ -506,5 +506,6 @@ function convert() {
 </script>
 </body>
 </html>
+
 
 
